fix: stretched to full width

--- a/singolo1.css
+++ b/singolo1.css
@@ -34,36 +34,35 @@
   font-style: normal;
 }
 
-
 body {
-  width: 1020px;
-  margin: auto;
+  margin: 0;
 }
+
+/*header*/
+.header {
+  width: 100%;
+  background-color: #2d303a;
+  border-bottom: 6px solid #323746;
+}
+
+
 
 
 .vrap-for-navigate {
   position: relative;
   display: flex;
-  padding: 26px 0 32px 0;
-  background-color: #2d303a;
-  /*УСЛОВНО*/
+  margin: auto;
+  width: 1020px;
+  padding: 25px 0 28px 0;
 }
 
 
-.vrap-for-navigate::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 6px;
-  align-items: center;
-  background-color: #323746;
-}
+
 
 
 h1 {
   width: 124px;
-  height: min-content;
+  height: 36px;
   margin: 0 40px;
   padding: 0;
   justify-self: flex-start;
@@ -102,7 +101,7 @@ h1 {
 }
 
 nav {
-  margin: 15px 40px 0 auto;
+  margin: 17px 40px 0 auto;
 }
 
 
@@ -139,7 +138,7 @@ nav {
   content: "";
   width: 3px;
   height: 3px;
-  margin: 0 14px;
+  margin: 0 13px;
   background-color: #494e62;
 }
 
@@ -151,18 +150,112 @@ nav {
   margin: 0;
 }
 
+/*слайдер*/
+.container-slider {
+  background-color: #f06c64;
+}
+
+
+.slider {
+  position: relative;
+  width: 1020px;
+  margin: auto;
+}
+
+
+.slider__btn-left {
+  background: url(assets/btn-left.png);
+  position: absolute;
+  top: 281px;
+  left: 42px;
+  width: 16px;
+  height: 27px;
+  z-index: 1;
+}
+
+
+.slider__btn-left:hover {
+  content: "";
+  background: url(assets/btn-left-hover.png);
+  cursor: pointer;
+}
+
+
+.slider__btn-right {
+  background: url(assets/btn-left.png);
+  position: absolute;
+  top: 281px;
+  right: 40px;
+  width: 16px;
+  height: 27px;
+  z-index: 1;
+  transform: rotate(180deg)
+}
+
+
+.slider__btn-right:hover {
+  background: url(assets/btn-left-hover.png);
+  cursor: pointer;
+}
+
+
+.slider__item {
+  position: relative;
+  height: 600px;
+
+}
+
+
+.vrap-for-phone {
+  position: absolute;
+}
+
+
+.vrap-for-phone-vertical {
+  top: 53px;
+  left: 112px;
+}
+
+
+.phone:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+
+.vrap-for-phone-gorizontal {
+  top: 174px;
+  left: 425px;
+}
+
+
+/*сервисы*/
+.wrap-services {
+  background-color: #f2f2f2;
+  border-bottom: 6px solid #ffffff;
+}
+
+.container-services {
+  padding: 59px 38px 67px 38px;
+  margin: auto;
+  width: 938px;
+}
+
+
+
+
 
 .name-services {
   font-size: 30px;
   font-family: 'Lato-Black';
   font-weight: bold;
   color: #666d89;
-  margin: 0 0 20px 0;
+  margin: 0 0 18px 0;
 }
 
 
 .description-services {
-  margin: 0 40px 0 0;
+  margin: 0;
   font-size: 18px;
   font-family: 'Lato-Light';
   font-weight: normal;
@@ -196,107 +289,24 @@ nav {
 }
 
 
-.slider {
-  position: relative;
-}
 
 
-.slider__btn-left {
-  background: url(assets/btn-left.png);
-  position: absolute;
-  top: 281px;
-  left: 42px;
-  width: 16px;
-  height: 27px;
-  z-index: 1;
-
-}
 
 
-.slider__btn-left:hover {
-  content: "";
-  background: url(assets/btn-left-hover.png);
-  cursor: pointer;
-}
 
-
-.slider__btn-right {
-  background: url(assets/btn-left.png);
-  position: absolute;
-  top: 281px;
-  right: 40px;
-  width: 16px;
-  height: 27px;
-  z-index: 1;
-  transform: rotate(180deg)
-}
-
-
-.slider__btn-right:hover {
-  background: url(assets/btn-left-hover.png);
-  cursor: pointer;
-}
-
-
-.slider__item {
-  position: relative;
-  height: 600px;
-  background-color: #f06c64;
-}
-
-
-.vrap-for-phone {
-  position: absolute;
-}
-
-
-.vrap-for-phone-vertical {
-  top: 53px;
-  left: 112px;
-}
-
-
-.phone:hover {
-  cursor: pointer;
-  opacity: 0.8;
-}
-
-
-.vrap-for-phone-gorizontal {
-  top: 174px;
-  left: 425px;
-}
-
-
-.wrap-main {
-  position: relative;
-  padding: 59px 0 73px 40px;
-  background-color: #f2f2f2;
-}
-
-
-.wrap-services {
-  margin: 0 0 46px 0;
+.wrap-desription-services {
+  margin: 0 0 47px 0;
 }
 
 
 .table-services {
   display: grid;
   grid-template: repeat(2, 84px)/repeat(3, 300px);
-  grid-gap: 39px 20px;
+  grid-gap: 39px 19px;
 }
 
 
-.wrap-main::after {
-  content: "";
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 6px;
-  background-color: #ffffff;
-}
+
 
 
 .table-services__item {
